# QCommE2E

./: README.md  environment.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: default.yaml  fiber_channel.yaml  fso_channel.yaml
docs/: api_reference.md  architecture.md  channel_models.md
experiments/fiber_pmd_qae/: README.md  run.py
experiments/fso_turbulence_e2e/: README.md  run.py
experiments/quantum_baseline_comparison/: README.md  run.py
notebooks/: 01_channel_model_tutorial.ipynb  02_qae_fso_compensation.ipynb  03_end_to_end_training.ipynb  04_quaternion_pmd_results.ipynb  05_quantum_channel_baseline_comparison.ipynb
results/: .gitignore
scripts/: format.sh  lint.sh  run_all_experiments.sh
src/quantum_comm_sim/: __init__.py
src/quantum_comm_sim/autoencoders/: __init__.py  base_qae.py  reuploading_qae.py  spatial_mode_qae.py  variational_qae.py
src/quantum_comm_sim/channels/: __init__.py  base_channel.py  bosonic_channel.py  composite_channel.py  dephasing_channel.py  depolarizing_channel.py  erasure_channel.py  pmd_channel.py  quaternion_pmd_channel.py  turbulence_channel.py
src/quantum_comm_sim/distributed/: __init__.py  repeater_chain.py  routing.py
src/quantum_comm_sim/equalization/: __init__.py  kalman_equalizer.py  neural_equalizer.py  quaternion_pmd_equalizer.py
src/quantum_comm_sim/hardware/: __init__.py  device_noise.py  pulse_shaping.py
src/quantum_comm_sim/metrics/: ber_ser.py  entanglement.py  fidelity.py  mi_gmi.py
tests/: test_channels.py  test_metrics.py  test_transceiver.py
(+19 files in other folders)
