[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quantum-comm-sim"
version = "0.1.0"
description = "End-to-End Quantum Communication System Simulator"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Researcher", email = "researcher@example.de"}
]
keywords = ["quantum", "communication", "simulation", "autoencoder", "FSO"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "torch>=2.0",
    "matplotlib>=3.7",
    "pyyaml>=6.0",
    "tqdm>=4.65",
    "qutip>=5.0",
    "pennylane>=0.30",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pylint>=2.17",
    "black>=23.0",
    "tensorboard>=2.13",
    "jupyter",
]

[project.urls]
Homepage = "https://github.com/yourusername/quantum-comm-sim"
Issues = "https://github.com/yourusername/quantum-comm-sim/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ['py310', 'py311']

[tool.pylint.messages_control]
disable = ["R0903", "R0913", "C0103"]
